# rftkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: cluster_based_rubrics.md  graders.md
examples/: basic_grader_usage.ipynb
src/rftkit/: __init__.py  base.py  constants.py  types.py  utils.py
src/rftkit/grader_code/: __init__.py  format_validator.py  indicator_validator.py
src/rftkit/graders/: __init__.py  aggregator.py  formatting.py  indicator.py  rubric.py
src/rftkit/prompts/: __init__.py  rubric.py
