[project]
name = "rftkit"
version = "0.1.0"
description = "A comprehensive toolkit for OpenAI's Reinforcement Fine-Tuning (RFT), featuring Pydantic-based grader creation, Graders API SDK, and dataset utilities."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Artur Barbosa Carneiro", email = "arturbarbosa10@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0",
]
keywords = ["openai", "reinforcement-learning", "fine-tuning", "rft", "graders", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ArturBarbosa/rftkit"
Documentation = "https://github.com/ArturBarbosa/rftkit/blob/main/README.md"
Repository = "https://github.com/ArturBarbosa/rftkit"
Issues = "https://github.com/ArturBarbosa/rftkit/issues"
Changelog = "https://github.com/ArturBarbosa/rftkit/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rftkit"]
